[tool.poetry]
name = "pycones"
version = "0.1.0"
description = ""
authors = ["william <william_swl@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
numpy = "^1.25.0"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
tox = "^4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
